NEW FEATURE: basic auth pass through EPP added
